# Incompact3d

./: .gitignore  CMakeLists.txt  Git Utilities  Quick Incompact3d guide and notes.md  aries_utilities  axial_piston_pump.py  git_utilities  write_scalar_plane.txt
1-pre_processing/: mesh_evaluation.py  mesh_subs.py  pre_processing_tools.py  stretching_mesh.py
1-pre_processing/Stretching Mesh/: mesh_evaluation_ttbl.py  mesh_y.txt  sim_settings.txt
1-pre_processing/stretching_mesh/: mesh_evaluation.f90  mesh_evaluation.py  mesh_evaluation_ttbl.py  mesh_y.txt  stretching_parameter_channel.f90
2-solver/: CMakeLists.txt  CMakeLists_new.txt
2-solver/cmake/: FindDECOMP2D.cmake  FindDECOMP2D_stop.cmake  X3D_Compilers.cmake
2-solver/cmake/compilers/: X3D_flags_intel.cmake
2-solver/cmake/decomp2d/: downloadBuild2decomp.cmake.in
2-solver/decomp2d/: io_write_plane.inc
2-solver/examples/: extra_options_input.i3d
2-solver/examples/Channel-Flow/: input.i3d  input_oscillating_walls.i3d  input_retau200_cfr.i3d  post.prm  post_incompact.sh
2-solver/examples/Channel-Flow - Re_tau = 200 - CFR/: input.i3d  run.sh
2-solver/examples/Channel-Flow_retau180_cfr/: input.i3d  post.prm  post_incompact.sh  run.sh
2-solver/examples/Channel-Flow_retau200_cfr/: input.i3d  post.prm  post_incompact.sh
2-solver/examples/Temporal-TBL/: extra_options_input.i3d  input.i3d  post.prm  run.sh
2-solver/examples/Temporal-TBL_medium_domain/: input.i3d  mesh_y.txt  post.prm  post_incompact.sh  run.sh  sim_settings.txt
2-solver/src/: BC-Channel-flow.f90  BC-Temporal-TBL.f90  CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  case.f90  constants.f90  derive.f90  derive_y1d.f90  extra_tools.f90  filters.f90  genepsi3d.f90  implicit.f90  les_models.f90  module_param.f90  navier.f90  parameters.f90  poisson.f90  schemes.f90  time_integrators.f90  tools.f90  tools_for_ttbl.f90  transeq.f90  variables.f90  visu.f90  xcompact3d.f90
3-post_processing/: post.prm
3-post_processing/1d_spectra/: 1d_spectra.py
3-post_processing/cf_monitoring/: cf_monitoring.py  cf_monitoring_subs.py  high_order_integrals_evol.py
3-post_processing/corr_2dplot/: corr_2dplot.py  corr_2dplot_sub.py
3-post_processing/correlations/: corr.py  prova_corr.py
3-post_processing/field_images/: field_images.py
3-post_processing/high_order_integrals/: high_order_integrals.py  integral_statistics.txt  mean_stats40.0.txt  param_stats_ho.txt  vort_stats20.0.txt  vort_stats40.0.txt
3-post_processing/high_order_integrals_evol/: high_order_integrals_evol.py
3-post_processing/plot_statistics/: plot_statistics.py  plot_statistics_channels.py
3-post_processing/post_incompact3d/: CMakeLists.txt  CMakeLists_old.txt  post.prm
3-post_processing/post_incompact3d/src/: CMakeLists.txt  CMakeLists_old.txt  derive_y1d.f90  ibm.f90  module_param.f90  parameters.f90  post.f90  post_incompact3d.f90  post_processing_mod.f90  post_processing_tools.f90  pp_tools.f90  schemes.f90  statistics_subs.f90  statistics_subs_2.f90  tke_eq.f90  tools.f90  tools_pp.f90  variables.f90
3-post_processing/python_common/: plot_params.py  plot_settings.py  plot_subs.py  plotting_params.py  read_files.py  read_incompact3d_files.py  read_input_files.py  read_reference_data.py  read_retau.py  readme.txt  semilog_plot_settings.py  set_flow_parameters.py  ttbl_subs.py
3-post_processing/reference_data/: readme.txt
3-post_processing/scalar_images/: scalar_images.py
3-post_processing/spectra/: 1dpremult_spectra.py
3-post_processing/ttbl_indexes/: ttbl_indexes.py
3-post_processing/ttbl_indexes_snap/: ttbl_indexes_snap.py
4-common/: readme.txt  readme.txt.txt
4-common/decomp2d/: CMakeLists.txt  decomp_2d.f90  fft_fftw3.f90  io.f90
4-common/python_common/: plot_params.py  plot_subs.py  read_files.py  readme.txt  set_flow_parameters.py  ttbl_subs.py  write_txt_tables.py
4-common/src/: derive.f90  derive_y1d.f90  extra_tools.f90  filters.f90  ibm.f90  implicit.f90  module_param.f90  parameters.f90  readme.txt  readme.txt.txt  schemes.f90  tools.f90  variables.f90  visu.f90
4-incompact3d_common/: extra_tools.f90  filters.f90  implicit.f90  schemes.f90  visu.f90
5-external/: readme.txt
examples/: CMakeLists.txt
examples/Channel-Flow/: input.i3d  out  restart.info
post_processing/: CMakeLists.txt  Makefile  post.f90  post.prm  statistics.f90
post_processing/2d-visualization/: avg_fields.m
post_processing/src/: CMakeLists.txt  module_param.f90  parameters.f90  post.f90  post_processing_mod.f90  reading_sub.f90  statistics_sub.f90  statistics_subs.f90  tools.f90  variables.f90  visu.f90
solver/: CMakeLists.txt
solver/src/: BC-Temporal-TBL.f90  CMakeLists.txt  case.f90  implicit.f90  module_param.f90  navier.f90  parameters.f90  xcompact3d.f90
src/: BC-Channel-flow.f90  CMakeLists.txt  case.f90  derive.f90  filters.f90  genepsi3d.f90  les_models.f90  module_param.f90  navier.f90  parameters.f90  poisson.f90  probes.f90  transeq.f90  visu.f90  xcompact3d.f90
two_dim_vis/: MEAN350.0.txt  avg_fields.m  mean_statistics400.0.txt
utilities/: MEAN400.0_mycode_extra_diss.txt  avg_fields.m  mean_stats400.0_mycode_nodiss.txt  mesh_evaluation.f90  setup_temporal_tbl.asv  setup_temporal_tbl.m  stretching_parameter_channel.f90
utilities/High order integral calculations/: high_order_integrals.py  param_stats_ho.txt
utilities/Incompact3d scratch/: scratch filter noise incompact init ttbl
utilities/Matlab scratch/: reading statistics matlab  reading statistics matlab & others  setup_temporal_tbl.m
utilities/Matlab vis. channel/: avg_fields_channel.m  mean_stats.txt  mean_stats400.0_default_extra_diss.txt  mean_stats400.0_mycode_cpg.txt  mean_stats400.0_mycode_extra_diss.txt  vort_stats400.0.txt
utilities/Matlab vis. ttbl/: avg_fields_ttbl.m  mean_stats 20.0.txt  mean_stats152.5.txt  mean_stats430.0.txt  mean_stats600.0.txt  prova.py  vort_stats 20.0.txt  vort_stats152.5.txt  vort_stats430.0.txt  vort_stats600.0.txt
utilities/Stretching mesh/: mesh_evaluation  mesh_evaluation.f90  mesh_evaluation.py  sim_settings.txt
(+97 files in other folders)
